minor fixes, center align fix

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,11 @@ body {
 	color: black;
 }
 
+#maincontent p h2 {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 #leftnav img {
 	padding-top: 5px;
 }
